--- a/TrabalhoFinal - Hospital2/src/gui/TelaLoginPaciente.fxml
+++ b/TrabalhoFinal - Hospital2/src/gui/TelaLoginPaciente.fxml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1">
-	<!-- TODO Add Nodes -->
-</AnchorPane>
 
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.TelaLoginPacienteController">
+   <children>
+      <TextField fx:id="textFieldUsuario" layoutX="226.0" layoutY="83.0" promptText="CPF" />
+      <TextField fx:id="textFieldSenha" layoutX="226.0" layoutY="127.0" promptText="SENHA" />
+      <Button fx:id="botaoLogin" layoutX="274.0" layoutY="174.0" mnemonicParsing="false" onAction="#fazerLogin" text="LOGIN" />
+   </children>
+</AnchorPane>
