--- a/TrabalhoFinal - Hospital2/src/gui/CadastroCliente.fxml
+++ b/TrabalhoFinal - Hospital2/src/gui/CadastroCliente.fxml
@@ -1,23 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.CadastroClienteController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onDragDetected="#initialize" onMouseDragged="#initialize" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.CadastroClienteController">
    <children>
       <Label layoutX="14.0" layoutY="63.0" text="Nome:" />
       <TextField fx:id="textFieldNome" layoutX="58.0" layoutY="59.0" />
       <Label layoutX="13.0" layoutY="95.0" text="Idade" />
-      <Label layoutX="13.0" layoutY="123.0" prefHeight="18.0" prefWidth="147.0" text="Plano de saúde:" />
-      <TextField fx:id="textFieldIdade" layoutX="94.0" layoutY="91.0" />
-      <TextField fx:id="textFieldPlano" layoutX="169.0" layoutY="120.0" />
+      <Label layoutX="13.0" layoutY="164.0" prefHeight="18.0" prefWidth="150.0" text="Plano de saúde:" />
+      <TextField fx:id="textFieldIdade" layoutX="59.0" layoutY="91.0" />
+      <TextField fx:id="textFieldPlano" layoutX="110.0" layoutY="160.0" />
       <Button fx:id="botaoRealizarCadastroC" layoutX="439.0" layoutY="78.0" mnemonicParsing="false" onAction="#realizarCadastroP" text="Realizar cadastro" />
       <Label fx:id="labelMensagem" layoutX="286.0" layoutY="291.0" />
-      <Label layoutX="14.0" layoutY="153.0" text="Senha:" />
-      <TextField fx:id="textFieldSenha" layoutX="59.0" layoutY="149.0" />
-      <TextField fx:id="textFieldCPF" layoutX="60.0" layoutY="187.0" />
-      <Label layoutX="18.0" layoutY="192.0" text="CPF:" />
+      <Label layoutX="10.0" layoutY="195.0" text="Senha:" />
+      <TextField fx:id="textFieldSenha" layoutX="58.0" layoutY="191.0" />
+      <TextField fx:id="textFieldCPF" layoutX="59.0" layoutY="223.0" />
+      <Label layoutX="16.0" layoutY="227.0" text="CPF:" />
+      <CheckBox fx:id="checkBoxPlano" layoutX="22.0" layoutY="130.0" mnemonicParsing="false" text="Tem plano de saúde?" />
    </children>
 </AnchorPane>
