--- a/TrabalhoFinal - Hospital2/src/gui/MenuAdmin.fxml
+++ b/TrabalhoFinal - Hospital2/src/gui/MenuAdmin.fxml
@@ -1,11 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.MenuAdminController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="435.0" prefWidth="371.0" style="-fx-background-color: #D2E0FB;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.MenuAdminController">
    <children>
-      <Button fx:id="botaoCadastrarMedico" layoutX="245.0" layoutY="90.0" mnemonicParsing="false" onAction="#cliqueBotaoCadastrarMedico" text="Cadastrar médico" />
-      <Button fx:id="botaoCadastrarPaciente" layoutX="242.0" layoutY="187.0" mnemonicParsing="false" onAction="#cliqueBotaoCadastrarPaciente" text="Cadastrar paciente" />
+      <Button fx:id="botaoCadastrarMedico" layoutX="129.0" layoutY="238.0" mnemonicParsing="false" onAction="#cliqueBotaoCadastrarMedico" prefHeight="32.0" prefWidth="115.0" style="-fx-background-color: #39A7FF;" text="Cadastrar médico" textFill="WHITE" />
+      <Button fx:id="botaoCadastrarPaciente" layoutX="129.0" layoutY="351.0" mnemonicParsing="false" onAction="#cliqueBotaoCadastrarPaciente" prefHeight="32.0" prefWidth="115.0" style="-fx-background-color: #39A7FF;" text="Cadastrar paciente" textFill="WHITE" />
+      <Text layoutX="91.0" layoutY="152.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Menu Administrador" wrappingWidth="191.77099609375">
+         <font>
+            <Font name="Arial Rounded MT Bold" size="19.0" />
+         </font>
+      </Text>
+      <ImageView fitHeight="50.0" fitWidth="50.0" layoutX="161.0" layoutY="180.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../../../Downloads/doctor.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="54.0" fitWidth="50.0" layoutX="162.0" layoutY="301.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../../../Downloads/patient%20(1).png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="79.0" fitWidth="77.0" layoutX="148.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../../../Downloads/hospital.png" />
+         </image>
+      </ImageView>
+      <Text fill="#124991" layoutX="143.0" layoutY="98.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Clínica Unity" wrappingWidth="86.39995117187505">
+         <font>
+            <Font name="Arial Rounded MT Bold" size="14.0" />
+         </font>
+      </Text>
    </children>
 </AnchorPane>
