--- a/TrabalhoFinal - Hospital2/src/gui/TelaLoginAdmin.fxml
+++ b/TrabalhoFinal - Hospital2/src/gui/TelaLoginAdmin.fxml
@@ -3,12 +3,37 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.TelaLoginAdminController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="427.0" prefWidth="429.0" style="-fx-background-color: #D2E0FB;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.TelaLoginAdminController">
    <children>
-      <TextField fx:id="textFieldUsuario" layoutX="226.0" layoutY="87.0" promptText="Admin" />
-      <PasswordField fx:id="textFieldSenha" layoutX="227.0" layoutY="130.0" promptText="Senha" />
-      <Button fx:id="botaoLoginAdmin" layoutX="275.0" layoutY="175.0" mnemonicParsing="false" onAction="#fazerLoginAdmin" text="LOGIN" />
+      <TextField fx:id="textFieldUsuario" layoutX="139.0" layoutY="238.0" />
+      <PasswordField fx:id="textFieldSenha" layoutX="139.0" layoutY="300.0" />
+      <Button fx:id="botaoLoginAdmin" layoutX="184.0" layoutY="348.0" mnemonicParsing="false" onAction="#fazerLoginAdmin" style="-fx-background-color: #39A7FF;" text="ENTRAR" textFill="WHITE" />
+      <ImageView fitHeight="95.0" fitWidth="100.0" layoutX="167.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../../../Downloads/hospital.png" />
+         </image>
+      </ImageView>
+      <Text layoutX="140.0" layoutY="227.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Login:">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Text>
+      <Text layoutX="139.0" layoutY="290.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Senha:">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Text>
+      <Text fill="#124991" layoutX="174.0" layoutY="115.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Clínica Unity">
+         <font>
+            <Font name="Arial Rounded MT Bold" size="13.0" />
+         </font>
+      </Text>
+      <Text layoutX="62.0" layoutY="181.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Para acessar o sistema de cadastro, informe login e senha" />
    </children>
 </AnchorPane>
