--- a/TrabalhoFinal - Hospital2/src/gui/TelaLoginMedico.fxml
+++ b/TrabalhoFinal - Hospital2/src/gui/TelaLoginMedico.fxml
@@ -1,21 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.TelaLoginMedicoController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="428.0" prefWidth="428.0" style="-fx-background-color: #D2E0FB;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.TelaLoginMedicoController">
    <children>
-      <PasswordField fx:id="textFieldSenha" layoutX="225.0" layoutY="141.0" promptText="Senha" />
-      <TextField fx:id="textFieldUsuario" layoutX="225.0" layoutY="105.0" promptText="Usuário (CRM)" />
-      <Button fx:id="botaoLogin" layoutX="274.0" layoutY="187.0" mnemonicParsing="false" onAction="#fazerLogin" text="LOGIN" />
-      <Label layoutX="270.0" layoutY="47.0" text="MÉDICO">
+      <PasswordField fx:id="textFieldSenha" layoutX="139.0" layoutY="300.0" />
+      <TextField fx:id="textFieldUsuario" layoutX="139.0" layoutY="238.0" />
+      <Button fx:id="botaoLogin" layoutX="184.0" layoutY="340.0" mnemonicParsing="false" onAction="#fazerLogin" style="-fx-background-color: #39A7FF;" text="ENTRAR" textFill="WHITE" />
+      <Text layoutX="73.0" layoutY="181.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Para acessar o sistema médico, informe CRM e senha" />
+      <ImageView fitHeight="95.0" fitWidth="100.0" layoutX="166.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../../../Downloads/hospital.png" />
+         </image>
+      </ImageView>
+      <Text fill="#124991" layoutX="174.0" layoutY="115.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Clínica Unity">
          <font>
-            <Font size="16.0" />
+            <Font name="Arial Rounded MT Bold" size="13.0" />
          </font>
-      </Label>
+      </Text>
+      <Text layoutX="140.0" layoutY="227.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Usuário (CRM):">
+         <font>
+            <Font name="Arial Rounded MT Bold" size="12.0" />
+         </font>
+      </Text>
+      <Text layoutX="139.0" layoutY="290.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Senha:">
+         <font>
+            <Font name="Arial Rounded MT Bold" size="12.0" />
+         </font>
+      </Text>
    </children>
 </AnchorPane>
