--- a/TrabalhoFinal - Hospital2/src/gui/TelaLoginPaciente.fxml
+++ b/TrabalhoFinal - Hospital2/src/gui/TelaLoginPaciente.fxml
@@ -2,13 +2,38 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.TelaLoginPacienteController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="430.0" prefWidth="430.0" style="-fx-background-color: #D2E0FB;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.TelaLoginPacienteController">
    <children>
-      <TextField fx:id="textFieldUsuario" layoutX="226.0" layoutY="83.0" promptText="CPF" />
-      <TextField fx:id="textFieldSenha" layoutX="226.0" layoutY="127.0" promptText="SENHA" />
-      <Button fx:id="botaoLogin" layoutX="274.0" layoutY="174.0" mnemonicParsing="false" onAction="#fazerLogin" text="LOGIN" />
+      <TextField fx:id="textFieldUsuario" layoutX="139.0" layoutY="238.0" />
+      <TextField fx:id="textFieldSenha" layoutX="139.0" layoutY="300.0" />
+      <Button fx:id="botaoLogin" layoutX="184.0" layoutY="340.0" mnemonicParsing="false" onAction="#fazerLogin" style="-fx-background-color: #39A7FF;" text="ENTRAR" textFill="WHITE" />
+      <ImageView fitHeight="95.0" fitWidth="100.0" layoutX="167.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../../../Downloads/hospital.png" />
+         </image>
+      </ImageView>
+      <Text layoutX="139.0" layoutY="290.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Senha:">
+         <font>
+            <Font name="Arial Rounded MT Bold" size="12.0" />
+         </font>
+      </Text>
+      <Text layoutX="140.0" layoutY="220.0" strokeType="OUTSIDE" strokeWidth="0.0" />
+      <Text layoutX="73.0" layoutY="181.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Para acessar o sistema do paciente, informe CPF e senha" />
+      <Text fill="#124991" layoutX="174.0" layoutY="115.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Clínica Unity">
+         <font>
+            <Font name="Arial Rounded MT Bold" size="13.0" />
+         </font>
+      </Text>
+      <Text layoutX="140.0" layoutY="227.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CPF:">
+         <font>
+            <Font name="Arial Rounded MT Bold" size="12.0" />
+         </font>
+      </Text>
    </children>
 </AnchorPane>
